Display breadcrumps in small-caps
I wanted to put this in a stylesheet but for some reason can't get sass
to work properly on my dev machine.

--- a/pombola/templates/default_base.html
+++ b/pombola/templates/default_base.html
@@ -138,6 +138,12 @@
 
         {% block site_wide_message %}{% endblock %}
 
+<style>
+#breadcrumb {
+    font-variant: small-caps;
+}
+</style>
+
         {% load breadcrumbs %}
         {% block breadcrumbs %}
         <div id="breadcrumb">
