squash! Display breadcrumps in small-caps

--- a/pombola/core/static/sass/_breadcrumb.scss
+++ b/pombola/core/static/sass/_breadcrumb.scss
@@ -1,5 +1,6 @@
 #breadcrumb,
 #breadcrumb-replacement {
+  font-variant: small-caps;
   display: none; }
 
 @media only all and (min-width: 640px), print {
